<resources>
    <string name="app_name">Diabuddy</string>
    <string name="app_slogan">Track with Diabuddy, trek with confidence in your Diabetes journey.</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seventy_challenge">70–79% of readings in OK range in a day</string>
    <string name="eighty_challenge">80–89% of readings in OK range in a day</string>
    <string name="ninety_challenge">90–99% of readings in OK range in a day</string>
    <string name="hundred_challenge">100% of readings in OK range in a day</string>
    <string name="export_challenge">Downloaded trend data from Diabuddy</string>
    <string name="notes_challenge">Filled up notes for all entries in a day</string>
    <string name="nutrition_challenge">Checked the nutrition information of a food on Diabuddy</string>
    <string name="seventy_desc">This is the number of days when 70–79% of your readings have been in your target range! Getting there!</string>
    <string name="eighty_desc">This is the number of days when 80–89% of your readings have been in your target range! Keep it up!</string>
    <string name="ninety_desc">This is the number of days when 90–99% of your readings have been in your target range! Fantastic job!</string>
    <string name="hundred_desc">This is the number of days when 100% of your readings have been in your target range! Perfect!</string>
    <string name="export_desc">This is the number of times that you have downloaded your Diabuddy data! Analysing your past data is extremely useful in identifying certain areas you may have to work on. For example, if you tend to have hypers at a certain time of the day, you could consider modifying your boluses or basal. Do consult your doctor on such modifications (and show them your downloaded data) if you are unsure!</string>
    <string name="notes_desc">This is the number of days when you took notes in every logbook entry! Taking notes will help you remember what you did right or wrong, or provide specific information about activities, stress or illness that could affect your sugars. This can help you better understand what happens to your sugars under different conditions, making it easier to manage them in the future :D</string>
    <string name="nutrition_desc">This is the number of times that you have searched for a food in your Nutrition tab. Doing this gives you an estimate of the amount of carbohydrates in a certain food item, which can help you count the amount of carbs in your meal and make sure you bolus enough!</string>
    <string name="about">About This App</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="email_note">Do you have any feedback, questions or suggestions for the developer of Diabuddy? Feel free to use this page to send an email to the developer of this app to ask questions or provide feedback / suggestions!</string>
    <string name="email_subject">Email Subject</string>
    <string name="email_content">Email Content</string>
    <string name="send_email">Send Email!</string>
    <string name="sign_in_with_google">Log in / register with Google!</string>
    <string name="welcome_to_diabuddy">Welcome to Diabuddy!</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="title_activity_food_template">My Food Templates</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_logbook">My Logbook</string>
    <string name="title_trends">My Trends</string>
    <string name="title_messages">My Diabuddy</string>
    <string name="title_nutrition">My Nutrition</string>
    <string name="title_challenges">My Challenges</string>
    <string name="title_food_item">Food Items</string>
    <string name="title_meal">Meals</string>
    <string name="food_item_instructions">Click the + button to add a new food item to the list. Click on an existing food item to edit its details.</string>
    <string name="carb_label">Carbohydrates:</string>
    <string name="grams_label">grams</string>
    <string name="hint_food_name">Food Name</string>
    <string name="hint_carbs">Carbohydrates (in grams)</string>
    <string name="food_item_error">This name has been used before. Please use a different food name.</string>
    <string name="meal_error">This name has been used before. Please use a different meal name.</string>
    <string name="hint_meal_name">Meal Name</string>
    <string name="meal_instructions">Click the + button to add a new meal to the list. Click on an existing meal to edit its details.</string>
    <string name="meal_dialog_instructions">Select a food item and click the button to add it to the meal. Remove food items from the meal using the button in the same row.</string>
    <string name="delete">Delete</string>
    <string name="total_carbs">Total carbohydrates (in grams):</string>
    <string name="discard_edit">Discard Edit</string>
    <string name="save_edit">Save Edit</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="carbs">Carbs</string>
    <string name="view_more_trends">View more trends!</string>
    <string name="search">Search</string>
    <string name="nutrient">Nutrient</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="invalid_query_text">Invalid query! Please only include alphanumeric characters and spaces in your query. Do not include special characters and do not leave the text field empty. Please try again.</string>
    <string name="invalid_query">Invalid Query!</string>
    <string name="add_to_food_template">Add to food template</string>
    <string name="description">Description:</string>
    <string name="today_at_a_glance">Today at a Glance!</string>
    <string name="average">Average:</string>
    <string name="range">Range:</string>
    <string name="hypos">Hypos:</string>
    <string name="hypers">Hypers:</string>
    <string name="mmol_l">mmol/L</string>
    <string name="mg_dl">mg/dL</string>
    <string name="logbook_instructions">Click the + button to add a new logbook entry!</string>
    <string name="logbook_edit_instructions">Note: if this entry is being edited on multiple devices at once, only the version that is saved later will be saved! Please ensure you are connected to the Internet before saving.</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="blood_glucose_reading">Blood Glucose Reading</string>
    <string name="bolus">Bolus</string>
    <string name="correction">Correction</string>
    <string name="basal">Basal</string>
    <string name="total">Total:</string>
    <string name="units">units</string>
    <string name="food_description">Food Description</string>
    <string name="add_from_food_template">Add from Food Template!</string>
    <string name="exercise_duration_in_minutes">Exercise duration (in minutes)</string>
    <string name="intensity">Intensity:</string>
    <string name="notes_e_g">Notes (e.g. activities, symptoms)</string>
    <string name="discard">Discard</string>
    <string name="save_all_changes">Save all changes</string>
    <string name="save">Save</string>
    <string name="set_a_reminder">Set a Reminder</string>
    <string name="logbook_empty">No entries found. Click the + button to add a new entry!</string>
    <string name="food_item_empty">No food items added yet. Click the + button to add a new food item!</string>
    <string name="meal_empty">No meals added yet. Click the + button to add a new meal!</string>
    <string name="nutrition_empty">No search results found. Search for a type of food using the search bar above!</string>
    <string name="nutrition_instructions">Note: The values stated are for 100 grams of the food product.\nClick on a search result to view its nutrition information and add it to your food template!</string>
    <string name="achieved">Achieved</string>
    <string name="times">times</string>
    <string name="title_how_to_use">How To Use</string>
    <string name="title_credits">Credits</string>
    <string name="credits">Diabuddy (Version 1.1) was created by a Type 1 diabetic to help other diabetics! Feel free to let the developer know of any features you wish to see:</string>
    <string name="acknowledgements">This app uses the Edamam Food Search API. Many thanks to NUS High School of Mathematics &amp; Science for making this project possible.</string>
    <string name="download_this_page">Download page (PDF)</string>
    <string name="date_range">Date range:</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="average_reading">Average reading:</string>
    <string name="insulin_day">Total daily insulin:</string>
    <string name="insulin_kg_day">Insulin / kg / day:</string>
    <string name="carbs_g_day">Carbs (g) / day:</string>
    <string name="exercise_min_day">Exercise (min) / day:</string>
    <string name="in_range_colon">In range:</string>
    <string name="hypo_colon">Hypo:</string>
    <string name="hyper_colon">Hyper:</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_message">Permission to write to device files is required to download data.</string>
    <string name="account">Account:</string>
    <string name="year_of_diagnosis">Year of diagnosis</string>
    <string name="hyper_threshold">Hyper threshold</string>
    <string name="hypo_threshold">Hypo threshold</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="blood_glucose_unit">Blood Glucose Unit</string>
    <string name="hypo_threshold_et">Hypo Threshold</string>
    <string name="hyper_threshold_et">Hyper Threshold</string>
    <string name="year_of_diagnosis_et">Year of Diagnosis</string>
    <string name="date_of_birth_et">Date of Birth</string>
    <string name="weight_et">Weight (kg)</string>
    <string name="height_et">Height (cm)</string>
    <string name="hypo_threshold_desc">minimum value considered \"in range\"</string>
    <string name="hyper_threshold_desc">maximum value considered \"in range\"</string>
    <string name="let_s_get_started_with_some_basic_information">Let\'s get started with some basic information…</string>
    <string name="what_unit_do_you_prefer_using_for_blood_glucose">What unit do you prefer using for blood glucose?</string>
    <string name="hypo_question">Hypo threshold: what is the minimum blood glucose level in your target range?</string>
    <string name="hyper_question">Hyper threshold: what is the maximum blood glucose level in your target range?</string>
    <string name="onboard_settings_bottom">You can edit your hypo and hyper thresholds (and other optional information) anytime under Settings in the app bar later. However, you cannot change your blood glucose unit.</string>
    <string name="next">Next</string>
    <string name="challenge_instructions">Click on a challenge to see its description!</string>
    <string name="less_than_30_times">under 30 times</string>
    <string name="less_than_60_times">under 60 times</string>
    <string name="less_than_100_times">under 100 times</string>
    <string name="at_least_100_times">at least 100 times</string>
    <string name="title_activity_injection_sites">My Injection Sites</string>
</resources>