<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_signout"
        android:title="@string/action_sign_out"
        android:orderInCategory="1"
        android:icon="@drawable/ic_logout_white_24dp"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="2"
        android:icon="@drawable/ic_manage_accounts_white_24dp"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="4"
        android:icon="@drawable/ic_info_white_24dp"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>