<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".challenges.ChallengesFragment">

    <TextView
        android:id="@+id/challenge_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="6dp"
        android:text="@string/challenge_instructions"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"/>

    <GridLayout
        android:id="@+id/challenge_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="4"
        app:layout_constraintTop_toBottomOf="@id/challenge_instructions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="6dp"
            android:background="@color/red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/less_than_30_times"/>
        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="6dp"
            android:background="@color/orange"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/less_than_60_times"/>
        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="6dp"
            android:background="@color/yellow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/less_than_100_times"/>
        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="6dp"
            android:background="@color/teal_extra_light"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/at_least_100_times"/>
    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/challenges_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/challenge_legend"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>