<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".onboarding.OnboardSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/onboard_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:textSize="24sp"
        android:text="@string/let_s_get_started_with_some_basic_information"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/unit_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:text="@string/what_unit_do_you_prefer_using_for_blood_glucose"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/onboard_settings_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/unit_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/unit_question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:id="@+id/mmol_l_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmol_l"/>
        <RadioButton
            android:id="@+id/mg_dl_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mg_dl"/>
    </RadioGroup>

    <TextView
        android:id="@+id/hypo_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="30dp"
        android:text="@string/hypo_question"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/unit_radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/lower_bound_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/hypo_question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/hypo_unit"
        app:layout_constraintEnd_toStartOf="@id/hypo_unit">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lower_bound_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hypo_threshold_et"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/hypo_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/mmol_l"
        app:layout_constraintTop_toTopOf="@id/lower_bound_til"
        app:layout_constraintBottom_toBottomOf="@id/lower_bound_til"
        app:layout_constraintLeft_toRightOf="@id/lower_bound_til"
        app:layout_constraintStart_toEndOf="@id/lower_bound_til"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/hyper_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="30dp"
        android:text="@string/hyper_question"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/lower_bound_til"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/upper_bound_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/hyper_question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/hypo_unit"
        app:layout_constraintEnd_toStartOf="@id/hypo_unit">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/upper_bound_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hyper_threshold_et"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/hyper_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/mmol_l"
        app:layout_constraintTop_toTopOf="@id/upper_bound_til"
        app:layout_constraintBottom_toBottomOf="@id/upper_bound_til"
        app:layout_constraintLeft_toRightOf="@id/upper_bound_til"
        app:layout_constraintStart_toEndOf="@id/upper_bound_til"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/onboard_settings_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/ic_manage_accounts_white_24dp"
        app:tint="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="@id/onboard_settings_bottom"
        app:layout_constraintBottom_toBottomOf="@id/onboard_settings_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="parent"/>

    <TextView
        android:id="@+id/onboard_settings_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingRight="30dp"
        android:paddingEnd="30dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:text="@string/onboard_settings_bottom"
        app:layout_constraintTop_toBottomOf="@id/upper_bound_til"
        app:layout_constraintStart_toEndOf="@id/onboard_settings_icon"
        app:layout_constraintLeft_toRightOf="@id/onboard_settings_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/onboard_settings_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>